WIP: latest, pre-refactor GUI

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -118,7 +118,7 @@ form .field-name {
 
 .field-overlay {
   transition: opacity 0.25s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  pointer-events: none;
+  pointer-events: fill;
 }
 .appears-valid {
   .success-message {
