--- a/src/components/SchemaTools/index.scss
+++ b/src/components/SchemaTools/index.scss
@@ -39,4 +39,13 @@
   display: flex;
   justify-content: inherit;
   flex-direction: row;
+  > a {
+    flex-grow: 0;
+    width: 36px;
+    height: 36px;
+    text-align: center;
+  }
+  > .expand-spacer {
+    flex-grow: 4;
+  }
 }
