--- a/src/components/SchemaTools/index.scss
+++ b/src/components/SchemaTools/index.scss
@@ -40,7 +40,7 @@
 
 .icon-button-box {
   transform: translateX(31px) translateY(-16px);
-  align-items: start;
+  align-items: flex-start;
   display: flex;
   justify-content: right;
   flex-direction: row;
