--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,43 +7,85 @@ Large 	lg 	≥992px
 Extra large 	xl 	≥1200px
 Extra extra large 	xxl 	≥1400px
 */
+// Bootstrap breaks
+// Extra small screen / phone
+$breakpoint-xs: 0;
+// Small screen / phone
+$breakpoint-sm: 576px;
+// Medium screen / tablet
+$breakpoint-md: 768px;
+// Large screen / desktop
+$breakpoint-lg: 992px;
+// Extra large screen / wide desktop
+$breakpoint-xl: 1200p;
 
 .App {
   text-align: left;
   main {
-    min-height: 91vh;
-    height: 91vh;
+    min-height: 90vh;
+    height: 95vh;
+    flex-direction: column;
+    display: flex;
 
-    .data-input {
-      textarea:empty {
-        font-size: 22px;
-        text-align: center;
-        padding: 20px 0 0 0;
-      }
-      textarea {
-        max-height: 70vh;
-      }
+    margin: 0.25rem !important;
+
+    &.current-sm {
+      margin: 0rem !important;
+    }
+    &.current-md {
+      margin: 0rem !important;
+    }
+    &.current-lg {
+      margin: 1rem !important;
+    }
+    &.current-xl {
+      margin: 1.5rem 2.5rem !important;
     }
 
-    // overflow-y: auto;
-    // overflow-x: hidden;
-    > section {
+    // .data-input {
+    //   textarea:empty {
+    //     font-size: 22px;
+    //     text-align: center;
+    //     padding: 20px 0 0 0;
+    //   }
+    //   textarea {
+    //     max-height: 70vh;
+    //   }
+    // }
+
+    legend {
+      display: block;
+      font-size: 0.8rem;
+      flex-grow: 0;
+    }
+    section.page {
       width: 100%;
-      height: calc(90vh - 125px);
+      // height: calc(90vh - 125px);
       display: flex;
       justify-content: stretch;
-      flex-direction: column;
-      overflow-y: auto;
-
-      > div {
-        flex-grow: 0;
+      flex-direction: row;
+      flex-grow: 1;
+      > section {
+        display: flex;
+        justify-content: stretch;
+        flex-direction: column;
       }
-      > pre {
-        flex-grow: 2;
+    }
+    .generated-code {
+      flex-grow: 1;
+    }
+    .output-buttons-panel {
+      > button {
+        min-height: 2.75rem;
       }
-      > footer {
-        max-height: 32px;
-        font-size: 1.2rem;
+      // max-height: 3.75rem;
+      flex-grow: 1;
+      justify-content: stretch;
+      // margin: auto 0;
+      svg {
+        height: 2.75rem;
+        width: 2.75rem;
+        margin: 0.5rem;
       }
     }
   }
@@ -51,6 +93,60 @@ Extra extra large 	xxl 	≥1400px
   nav .MuiBreadcrumbs-li svg {
     margin-top: -7px;
     margin-right: 2px;
+  }
+}
+
+.App {
+  main.results-loaded {
+    .resizable-editor {
+      flex: 0 0 20%;
+    }
+    .generated-code {
+      min-height: 25vh;
+      flex: 2 0 60%;
+    }
+  }
+  main.stacked-view {
+    flex-grow: 0;
+
+    section {
+      padding-left: 0;
+      padding-right: 0;
+    }
+    section.page {
+      display: inline-flex;
+      flex-direction: column;
+      flex-shrink: 2;
+      flex-grow: 1;
+    }
+    .resizable-editor {
+      padding-left: 0;
+      padding-right: 0;
+      // flex-shrink: 1;
+      flex: 1 0 40%;
+    }
+    .generated-code {
+      flex: 1 0 40%;
+    }
+    .output-buttons-panel {
+      > button {
+        width: 100%;
+        max-height: 2.125rem;
+      }
+      > legend {
+        width: 25vw;
+      }
+      max-height: 5rem;
+      margin: 0.5rem 0;
+      flex-shrink: 0;
+      flex-grow: 0;
+      flex-direction: column;
+
+      svg {
+        height: 1.75rem;
+        width: 1.75rem;
+      }
+    }
   }
 }
 
@@ -151,36 +247,35 @@ form.generator {
   padding: 1.125rem;
   font-size: 1.2rem;
 }
+// @media (max-width: $breakpoint-sm) {
+//   .App {
+//     max-width: 100% !important;
+//     padding: 0 10px !important;
 
-@media (max-width: 575px) {
-  .App {
-    max-width: 100% !important;
-    padding: 0 10px !important;
+//     &.container {
+//       max-width: 100% !important;
+//     }
 
-    &.container {
-      max-width: 100% !important;
-    }
+//     main {
+//       > section {
+//         height: calc(91vh - 220px);
+//       }
+//     }
+//     .shadow-lg {
+//       margin: 1rem 0.25rem 0.25rem 0.25rem !important;
+//     }
 
-    main {
-      > section {
-        height: calc(91vh - 220px);
-      }
-    }
-    .shadow-lg {
-      margin: 1rem 0.25rem 0.25rem 0.25rem !important;
-    }
+//     .brand-link {
+//       font-size: 0.72em;
+//     }
+//   }
 
-    .brand-link {
-      font-size: 0.72em;
-    }
-  }
-
-  .output-buttons {
-    .MuiButton-startIcon {
-      margin: auto 0;
-    }
-  }
-}
+//   .output-buttons {
+//     .MuiButton-startIcon {
+//       margin: auto 0;
+//     }
+//   }
+// }
 
 @media (max-width: 575px) {
   form.generator {
