--- a/src/components/SchemaTools/ResultsView/ResultsView.scss
+++ b/src/components/SchemaTools/ResultsView/ResultsView.scss
@@ -1,7 +1,7 @@
 .generated-code-toolbar {
   position: absolute;
   opacity: 0.82;
-  right: 0;
-  top: 52px;
+  right: 12px;
+  top: 22px;
   z-index: 50;
 }
