--- a/src/components/SchemaTools/index.scss
+++ b/src/components/SchemaTools/index.scss
@@ -53,22 +53,23 @@
   color: rgba(255, 82, 82, 1);
   box-shadow: 0 0 0 0 rgba(255, 82, 82, 1);
   border-radius: 100%;
-  transform: scale(0.85);
+  transform: scale(0.65);
+  z-index: 100;
 }
 
 @keyframes pulse-red {
   0% {
-    transform: scale(0.85);
+    transform: scale(0.65);
     box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.7);
   }
 
   70% {
-    transform: scale(1);
+    transform: scale(0.9);
     box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
   }
 
   100% {
-    transform: scale(0.85);
+    transform: scale(0.65);
     box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
   }
 }
