--- a/src/components/OutputButtons/OutputButtons.scss
+++ b/src/components/OutputButtons/OutputButtons.scss
@@ -31,3 +31,30 @@
   //   }
   // }
 }
+
+%choose-output-indicator {
+  transition: all cubic-bezier(0.68, -0.55, 0.265, 1.55) 750ms,
+    fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms !important;
+  transform: rotate(0deg);
+}
+%rotate-point-right {
+  transform: rotate(-90deg);
+}
+
+.choose-output-indicator {
+  @extend %choose-output-indicator;
+}
+.rotate-point-right {
+  @extend %rotate-point-right;
+}
+.current-sm,
+.current-xs {
+  // combine both for small screens
+  .choose-output-indicator {
+    @extend %choose-output-indicator;
+    @extend %rotate-point-right;
+  }
+  .rotate-point-right {
+    transform: rotate(0deg);
+  }
+}
