--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,9 +21,12 @@ $breakpoint-xl: 1200p;
 
 .App {
   text-align: left;
+  nav.row {
+    flex: 0 1 120px;
+  }
   main {
     min-height: 90vh;
-    height: 95vh;
+    // height: 95vh;
     flex-direction: column;
     display: flex;
 
@@ -75,9 +78,10 @@ $breakpoint-xl: 1200p;
         display: flex;
         justify-content: stretch;
         flex-direction: column;
-        overflow-y: auto;
+        overflow-y: visible;
         overflow-x: visible;
-        max-height: 75vh;
+        // max-height: 75vh;
+        transition: height ease-in 500ms;
       }
     }
     .generated-code {
@@ -114,50 +118,49 @@ $breakpoint-xl: 1200p;
         display: inline-block;
         margin-right: 0.5rem;
       }
+      .resizable-editor {
+        // flex-shrink: 1;
+        flex: 1 1 50%;
+      }
+      .output-buttons-panel {
+        flex: 0 0 70px;
+      }
+      .generated-code {
+        flex: 1 2 15vh;
+      }
     }
     &.results-loaded.stacked-view {
       .resizable-editor {
-        flex: 0 1 100%;
-        min-height: 16vh;
+        flex: 1 2 200px;
+        min-height: 12vh;
       }
       .generated-code {
-        flex: 2 0 100%;
+        flex: 2 0 25vh;
       }
       .output-buttons {
-        align-content: center;
+        align-items: center;
         justify-content: center;
       }
-    }
-    .resizable-editor {
-      flex: 1 1 100%;
-    }
-    .generated-code {
-      flex: 1 0 100%;
     }
   }
   // Define the small-screen stacked UI css:
   main.stacked-view {
     flex-grow: 0;
 
-    .resizable-editor {
-      padding-left: 0;
-      padding-right: 0;
-      // flex-shrink: 1;
-      flex: 1 1 100%;
-    }
-    .generated-code {
-      flex: 0 1 100%;
-    }
+    // .generated-code {
+    //   flex: 0 1 100%;
+    // }
 
     section {
       padding-left: 0;
       padding-right: 0;
     }
     section.page {
+      flex: 2 0 100%;
       display: inline-flex;
       flex-direction: column;
-      flex-shrink: 2;
-      flex-grow: 1;
+      // flex-shrink: 2;
+      // flex-grow: 1;
     }
     .output-buttons-panel {
       .output-buttons {
@@ -169,10 +172,9 @@ $breakpoint-xl: 1200p;
       > legend {
         width: 100%;
       }
-      max-height: 6rem;
+      // max-height: 6rem;
       margin: 0.5rem auto;
-      flex-shrink: 0;
-      flex-grow: 0;
+      // flex: 0 1 100%;
       flex-direction: column;
 
       svg {
@@ -183,7 +185,21 @@ $breakpoint-xl: 1200p;
   }
 }
 
+.current-xs,
+.current-sm {
+  .demo-data-buttons {
+    order: 3;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    overflow-x: auto;
+  }
+}
+.schema-name-input {
+  order: 1;
+}
+// Header Styles
 .demo-data-buttons {
+  order: 3;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
