--- a/src/components/DemoDataMenu/DemoDataMenu.scss
+++ b/src/components/DemoDataMenu/DemoDataMenu.scss
@@ -8,7 +8,7 @@
 
   transition: all 0.5s ease-in;
   cursor: pointer;
-  text-decoration: underline;
+  // text-decoration: underline;
   &:hover {
     color: #f50057;
     .roll-dice {
@@ -23,6 +23,7 @@
   border-radius: 0.3rem;
   width: 28px;
   height: 28px;
+  padding: 1px 1px 0 0;
 }
 .roll-dice {
   box-sizing: border-box;
