--- a/src/components/OutputButtons/OutputButtons.scss
+++ b/src/components/OutputButtons/OutputButtons.scss
@@ -58,3 +58,24 @@
     transform: rotate(-90deg);
   }
 }
+
+.icon-button-box {
+  transform: translateX(31px) translateY(-16px);
+  align-items: flex-start;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+
+  > a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 0;
+    width: 36px;
+    height: 36px;
+    text-align: center;
+  }
+  > .expand-spacer {
+    flex-grow: 4;
+  }
+}
