--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -24,7 +24,7 @@ $breakpoint-xl: 1200px;
   // grid-template-columns: minmax(160px, 33%) 1fr 1fr;
   grid-template-columns: repeat(auto-fill, minmax(40%, 1fr));
   grid-template-rows: minmax(130px, 150px) minmax(30vh, 1fr);
-  gap: 0.25rem;
+  gap: 1rem;
   // 63 + 80 + 40 + 43.6
   justify-items: stretch;
   justify-content: stretch;
@@ -40,7 +40,7 @@ $breakpoint-xl: 1200px;
 
 .home-layout {
   @extend %three-column-stacking-layout;
-  max-height: 70vh;
+  max-height: 80vh;
   overflow-y: auto;
   padding: 4px;
   @media (max-height: 600) {
@@ -130,6 +130,46 @@ $breakpoint-xl: 1200px;
     font-size: 1.125rem;
   }
 }
+
+.cursor-error {
+  cursor: help;
+}
+.panel-error {
+  cursor: help;
+  svg {
+    opacity: 0.5;
+    color: #999;
+  }
+}
+
+// Credit: https://www.florin-pop.com/blog/2019/03/css-pulse-effect/
+// More reading: https://css-tricks.com/almanac/properties/a/animation/
+.pulse-error-icon {
+  animation: pulse-red 2s infinite;
+  color: rgba(245, 0, 87, 1);
+  box-shadow: 0 0 0 0 rgba(245, 0, 87, 1);
+  border-radius: 100%;
+  transform: scale(0.65);
+  z-index: 100;
+}
+
+@keyframes pulse-red {
+  0% {
+    transform: scale(0.65);
+    box-shadow: 0 0 0 0 rgba(245, 0, 87, 0.7);
+  }
+
+  70% {
+    transform: scale(0.9);
+    box-shadow: 0 0 0 10px rgba(245, 0, 87, 0);
+  }
+
+  100% {
+    transform: scale(0.65);
+    box-shadow: 0 0 0 0 rgba(245, 0, 87, 0);
+  }
+}
+
 // .two-column {
 //   height: auto;
 //   display: grid;
