--- a/src/components/DataInputEditor/DataInputEditor.scss
+++ b/src/components/DataInputEditor/DataInputEditor.scss
@@ -1,3 +1,11 @@
+.data-input-editor {
+  .panel-body {
+    .ace_editor {
+      max-height: 40vh;
+    }
+  }
+}
+
 .resizable {
   overflow: auto;
   resize: both;
