--- a/src/components/OutputButtons/OutputButtons.scss
+++ b/src/components/OutputButtons/OutputButtons.scss
@@ -30,6 +30,10 @@
   //     margin: 0 0.25rem;
   //   }
   // }
+  button {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
 }
 
 %choose-output-indicator {
